--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -13,4 +13,4 @@ author_profile: true
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
-{% endfor %}f
+{% endfor %}
